--- a/lib/components/Typography/typography.scss
+++ b/lib/components/Typography/typography.scss
@@ -3,6 +3,10 @@ $sizes: xl, lg, md, sm;
 $decorations: default, italic, underline, italic-underline;
 $weights: regular, bold;
 
+.quill-typography {
+    margin: 0;
+}
+
 @mixin styleWithSizes($type, $size, $weight, $decoration) {
     font-family: var(
         --semantic-typography-#{$type}-#{$size}-#{$weight}-#{$decoration}-fontFamily
