--- a/lib/styles/index.scss
+++ b/lib/styles/index.scss
@@ -1,6 +1,6 @@
 /* Global Styles */
 @import "@deriv-com/quill-tokens/dist/quill.css";
-@import "../../node_modules/modern-normalize/modern-normalize.css";
+@import url("https://unpkg.com/modern-normalize");
 
 @at-root {
     @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap");
