Jia/QUILL-1816/remove-reset.css (#295)
* fix: remove reset.css that will break ui

* chore: update review comment

* chore: remove package

--- a/lib/components/Notification/notification.scss
+++ b/lib/components/Notification/notification.scss
@@ -1,4 +1,11 @@
 .quill-notification {
+    &:link,
+    &:visited,
+    &:hover,
+    &:active {
+        text-decoration: none;
+    }
+
     position: relative;
     display: flex;
     width: 100%;
@@ -37,8 +44,8 @@
             top: var(--semantic-spacing-general-sm);
             border-radius: unset;
 
-            svg {
-                fill: var(--component-textIcon-normal-prominent);
+            &:hover {
+                background-color: transparent;
             }
         }
         .badge-unread {
