fix: update addon background token to semantic

--- a/lib/components/Input/text-field-addon/text-field-addon.scss
+++ b/lib/components/Input/text-field-addon/text-field-addon.scss
@@ -21,7 +21,7 @@
         &--left {
             &--outline {
                 border-right: var(--borderWidth-xs) solid
-                    var(--core-color-opacity-black-100);
+                    var(--component-field-border-color-default);
             }
             &--fill {
                 border-right: var(--borderWidth-sm) solid;
@@ -31,7 +31,7 @@
         &--right {
             &--outline {
                 border-left: var(--borderWidth-xs) solid
-                    var(--core-color-opacity-black-100);
+                    var(--component-field-border-color-default);
             }
             &--fill {
                 border-left: var(--borderWidth-sm) solid;
@@ -41,7 +41,9 @@
 
     &__variant {
         &--outline {
-            background-color: var(--core-color-solid-slate-75);
+            background-color: var(
+                --semantic-color-slate-solid-surface-frame-mid
+            );
         }
     }
 
