chore: update container component

--- a/lib/components/Loader/skeleton/container/skeleton-container.scss
+++ b/lib/components/Loader/skeleton/container/skeleton-container.scss
@@ -1,6 +1,10 @@
 .quill-skeleton-container {
     display: flex;
 
+    &__full-width {
+        width: 100%;
+    }
+
     &__direction {
         &--row {
             flex-direction: column;
