--- a/lib/styles/normalize.css
+++ b/lib/styles/normalize.css
@@ -12,17 +12,28 @@ Use a better box model (opinionated).
 *,
 ::before,
 ::after {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 html {
-    /* Improve consistency of default fonts in all browsers. (https://github.com/sindresorhus/modern-normalize/issues/3) */
-    font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
-        "Apple Color Emoji", "Segoe UI Emoji";
-    line-height: 1.15; /* 1. Correct the line height in all browsers. */
-    -webkit-text-size-adjust: 100%; /* 2. Prevent adjustments of font size after orientation changes in iOS. */
-    -moz-tab-size: 4; /* 3. Use a more readable tab size (opinionated). */
-    tab-size: 4; /* 3 */
+	/* Improve consistency of default fonts in all browsers. (https://github.com/sindresorhus/modern-normalize/issues/3) */
+	font-family:
+		system-ui,
+		'Segoe UI',
+		Roboto,
+		Helvetica,
+		Arial,
+		sans-serif,
+		'Apple Color Emoji',
+		'Segoe UI Emoji';
+	line-height: 1.15;
+	/* 1. Correct the line height in all browsers. */
+	-webkit-text-size-adjust: 100%;
+	/* 2. Prevent adjustments of font size after orientation changes in iOS. */
+	-moz-tab-size: 4;
+	/* 3. Use a more readable tab size (opinionated). */
+	tab-size: 4;
+	/* 3 */
 }
 
 /*
@@ -31,7 +42,8 @@ Sections
 */
 
 body {
-    margin: 0; /* Remove the margin in all browsers. */
+	margin: 0;
+	/* Remove the margin in all browsers. */
 }
 
 /*
@@ -45,8 +57,10 @@ Grouping content
 */
 
 hr {
-    height: 0; /* 1 */
-    color: inherit; /* 2 */
+	height: 0;
+	/* 1 */
+	color: inherit;
+	/* 2 */
 }
 
 /*
@@ -59,7 +73,7 @@ Add the correct text decoration in Chrome, Edge, and Safari.
 */
 
 abbr[title] {
-    text-decoration: underline dotted;
+	text-decoration: underline dotted;
 }
 
 /**
@@ -83,9 +97,16 @@ code,
 kbd,
 samp,
 pre {
-    font-family: ui-monospace, SFMono-Regular, Consolas, "Liberation Mono",
-        Menlo, monospace; /* 1 */
-    font-size: 1em; /* 2 */
+	font-family:
+		ui-monospace,
+		SFMono-Regular,
+		Consolas,
+		'Liberation Mono',
+		Menlo,
+		monospace;
+	/* 1 */
+	font-size: 1em;
+	/* 2 */
 }
 
 /**
@@ -93,7 +114,7 @@ Add the correct font size in all browsers.
 */
 
 small {
-    font-size: 80%;
+	font-size: 80%;
 }
 
 /**
@@ -102,18 +123,18 @@ Prevent 'sub' and 'sup' elements from affecting the line height in all browsers.
 
 sub,
 sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
+	font-size: 75%;
+	line-height: 0;
+	position: relative;
+	vertical-align: baseline;
 }
 
 sub {
-    bottom: -0.25em;
+	bottom: -0.25em;
 }
 
 sup {
-    top: -0.5em;
+	top: -0.5em;
 }
 
 /*
@@ -127,8 +148,10 @@ Tabular data
 */
 
 table {
-    text-indent: 0; /* 1 */
-    border-color: inherit; /* 2 */
+	text-indent: 0;
+	/* 1 */
+	border-color: inherit;
+	/* 2 */
 }
 
 /*
@@ -146,10 +169,14 @@ input,
 optgroup,
 select,
 textarea {
-    font-family: inherit; /* 1 */
-    font-size: 100%; /* 1 */
-    line-height: 1.15; /* 1 */
-    margin: 0; /* 2 */
+	font-family: inherit;
+	/* 1 */
+	font-size: 100%;
+	/* 1 */
+	line-height: 1.15;
+	/* 1 */
+	margin: 0;
+	/* 2 */
 }
 
 /**
@@ -158,7 +185,7 @@ Remove the inheritance of text transform in Edge and Firefox.
 
 button,
 select {
-    text-transform: none;
+	text-transform: none;
 }
 
 /**
@@ -166,10 +193,10 @@ Correct the inability to style clickable types in iOS and Safari.
 */
 
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-    -webkit-appearance: button;
+[type='button'],
+[type='reset'],
+[type='submit'] {
+	-webkit-appearance: button;
 }
 
 /**
@@ -177,8 +204,8 @@ Remove the inner border and padding in Firefox.
 */
 
 ::-moz-focus-inner {
-    border-style: none;
-    padding: 0;
+	border-style: none;
+	padding: 0;
 }
 
 /**
@@ -186,7 +213,7 @@ Restore the focus styles unset by the previous rule.
 */
 
 :-moz-focusring {
-    outline: 1px dotted ButtonText;
+	outline: 1px dotted ButtonText;
 }
 
 /**
@@ -195,7 +222,7 @@ See: https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d4
 */
 
 :-moz-ui-invalid {
-    box-shadow: none;
+	box-shadow: none;
 }
 
 /**
@@ -203,7 +230,7 @@ Remove the padding so developers are not caught out when they zero out 'fieldset
 */
 
 legend {
-    padding: 0;
+	padding: 0;
 }
 
 /**
@@ -211,7 +238,7 @@ Add the correct vertical alignment in Chrome and Firefox.
 */
 
 progress {
-    vertical-align: baseline;
+	vertical-align: baseline;
 }
 
 /**
@@ -220,7 +247,7 @@ Correct the cursor style of increment and decrement buttons in Safari.
 
 ::-webkit-inner-spin-button,
 ::-webkit-outer-spin-button {
-    height: auto;
+	height: auto;
 }
 
 /**
@@ -228,9 +255,11 @@ Correct the cursor style of increment and decrement buttons in Safari.
 2. Correct the outline style in Safari.
 */
 
-[type="search"] {
-    -webkit-appearance: textfield; /* 1 */
-    outline-offset: -2px; /* 2 */
+[type='search'] {
+	-webkit-appearance: textfield;
+	/* 1 */
+	outline-offset: -2px;
+	/* 2 */
 }
 
 /**
@@ -238,7 +267,7 @@ Remove the inner padding in Chrome and Safari on macOS.
 */
 
 ::-webkit-search-decoration {
-    -webkit-appearance: none;
+	-webkit-appearance: none;
 }
 
 /**
@@ -247,8 +276,10 @@ Remove the inner padding in Chrome and Safari on macOS.
 */
 
 ::-webkit-file-upload-button {
-    -webkit-appearance: button; /* 1 */
-    font: inherit; /* 2 */
+	-webkit-appearance: button;
+	/* 1 */
+	font: inherit;
+	/* 2 */
 }
 
 /*
@@ -261,5 +292,5 @@ Add the correct display in Chrome and Safari.
 */
 
 summary {
-    display: list-item;
+	display: list-item;
 }
