DTRA-1478 / Kate / Action sheet component improvement (#303)
* refactor: insrease swipable area of the handle bar

* refactor: unmount action sheet on close and refactored tests

* chore: refactor

* feat: add debounce and prop passing to children

* chore: apply suggestions

--- a/lib/components/ActionSheet/handle-bar/handle-bar.scss
+++ b/lib/components/ActionSheet/handle-bar/handle-bar.scss
@@ -2,11 +2,22 @@
 
 .quill-action-sheet--handle-bar {
     position: sticky;
+    z-index: 1;
     display: flex;
     touch-action: none;
     align-items: center;
     justify-content: center;
     padding-block: var(--component-actionSheet-spacing-padding-sm);
+
+    &::before {
+        content: "";
+        display: block;
+        height: var(--core-size-2400);
+        width: 100%;
+        position: absolute;
+        top: 0;
+        inset-inline-start: 0;
+    }
 
     @include breakpoint("lg") {
         display: none;
