refactor: toggleswicth focus state and add prop for ac sw header icon

--- a/lib/components/ActionSheet/header/header.scss
+++ b/lib/components/ActionSheet/header/header.scss
@@ -42,7 +42,14 @@
             fill: var(--component-textIcon-normal-prominent);
             position: absolute;
             top: 0;
-            right: 0;
+
+            &--right {
+                right: 0;
+            }
+
+            &--left {
+                left: 0;
+            }
 
             @include breakpoint("lg") {
                 left: 0;
