--- a/lib/styles/index.scss
+++ b/lib/styles/index.scss
@@ -1,11 +1,15 @@
 /* Global Styles */
 @import "@deriv-com/quill-tokens/dist/quill.css";
-@import "./normalize.css";
+@import "./reset.scss";
 
 @at-root {
     @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap");
     @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
     @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+}
+
+*[class^="quill-"] {
+    @include normalize;
 }
 
 .quill {
