DTRA-1469 / Kate / Refactor: ToggleSwitch and ActionSheet (#309)
* refactor: toggleswicth focus state and add prop for ac sw header icon

* refactor: add css transition npm package

* refactor: removed unsued package

* chore: css positioning

--- a/lib/components/ActionSheet/header/header.scss
+++ b/lib/components/ActionSheet/header/header.scss
@@ -42,10 +42,17 @@
             fill: var(--component-textIcon-normal-prominent);
             position: absolute;
             top: 0;
-            right: 0;
+
+            &--right {
+                inset-inline-end: 0;
+            }
+
+            &--left {
+                inset-inline-start: 0;
+            }
 
             @include breakpoint("lg") {
-                left: 0;
+                inset-inline-start: 0;
             }
 
             &--close {
