refactor: introduce dvh

--- a/lib/components/ActionSheet/portal/portal.scss
+++ b/lib/components/ActionSheet/portal/portal.scss
@@ -35,7 +35,7 @@
         margin-left: auto;
         margin-right: auto;
         display: flex;
-        max-height: 90vh;
+        max-height: 90dvh;
         width: 100%;
         max-width: 800px;
         flex-direction: column;
