--- a/lib/components/Notification/notification.scss
+++ b/lib/components/Notification/notification.scss
@@ -36,18 +36,7 @@
         &.warning {
             background-color: var(--core-color-opacity-yellow-100);
         }
-        &.close {
-            position: absolute;
-            width: var(--core-size-1200);
-            height: var(--core-size-1200);
-            right: var(--semantic-spacing-general-sm);
-            top: var(--semantic-spacing-general-sm);
-            border-radius: unset;
 
-            &:hover {
-                background-color: transparent;
-            }
-        }
         .badge-unread {
             position: absolute;
             top: 0;
@@ -57,6 +46,11 @@
             border-radius: var(--semantic-borderRadius-pill);
             background-color: var(--core-color-solid-red-700);
         }
+    }
+    .close {
+        position: absolute;
+        right: var(--semantic-spacing-general-sm);
+        top: var(--semantic-spacing-general-sm);
     }
     .body {
         display: flex;
