--- a/lib/components/Tooltip/tooltip.scss
+++ b/lib/components/Tooltip/tooltip.scss
@@ -1,17 +1,19 @@
-.tooltip-content {  
+.tooltip-content {
     border-radius: var(--core-borderRadius-400);
     &__variant {
         &-base {
             padding: var(--core-size-400) var(--core-size-800);
-            color:var(--component-textIcon-inverse-default);
+            color: var(--component-textIcon-inverse-default);
             min-height: var(--core-size-1600);
         }
         &-rich {
+            position: relative;
             padding: var(--core-size-800);
             &-content {
                 display: flex;
                 gap: var(--core-size-800);
                 flex-direction: column;
+                align-items: flex-start;
                 min-width: var(--core-size-4300);
             }
             &-title {
@@ -20,21 +22,20 @@
             &-header {
                 display: flex;
                 justify-content: space-between;
-                color: var(--component-textIcon-inverse-prominent)
+                color: var(--component-textIcon-inverse-prominent);
             }
             &-text {
                 display: flex;
                 flex-direction: column;
                 gap: var(--core-size-200);
-                color:var(--component-textIcon-inverse-default);
+                color: var(--component-textIcon-inverse-default);
             }
             &-icon {
                 position: absolute;
                 cursor: pointer;
-                right: var(--core-size-900);
-                top: var(--core-size-700);
+                right: var(--core-spacing-400);
+                top: var(--core-spacing-400);
             }
         }
     }
 }
-
