Jia/QUILL-1835/create skeleton container (#307)
* feat: add skeleton container

* chore: update container component

* chore: update

* chore: update skeleton container

* chore: update skeleton container component

* chore: update skeleton container test case

--- a/lib/components/Loader/skeleton/skeleton.scss
+++ b/lib/components/Loader/skeleton/skeleton.scss
@@ -33,5 +33,9 @@
         &--circle {
             border-radius: 100%;
         }
+
+        &--full-width {
+            width: 100%;
+        }
     }
 }
