--- a/lib/components/Atom/WheelPicker/base/wheel-picker.scss
+++ b/lib/components/Atom/WheelPicker/base/wheel-picker.scss
@@ -3,12 +3,15 @@
 .quill-wheel-picker {
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-evenly;
+  
     height: 100%;
     background-color: var(--component-field-bg-outline-default);
     padding: 0;
     @include breakpoint("md") {
         padding: var(--component-actionSheet-spacing-padding-sm);
+        background-color: var(--component-dropdownList-bg);
         border-radius: var(--core-borderRadius-400);
         box-shadow: var(--semantic-elevation-shadow-card-hover);
     }
@@ -33,21 +36,45 @@
         padding: 0;
         -ms-overflow-style: none;
         scrollbar-width: none;
+        overflow-wrap:anywhere ;
+        text-overflow: ellipsis;
+    
         transition: all var(--core-motion-duration-200)
             var(--core-motion-ease-400);
-        &::before {
-            position: absolute;
-            content: "";
-            transform: translateY(-50%);
-            width: 100%;
-            height: 48px;
-            left: 0;
-            right: 0;
-            padding: 0;
-            background-color: var(--component-dropdownItem-bg-hover);
-            pointer-events: none;
-            border-radius: var(--core-borderRadius-200);
-        }
+
+            &::before {
+                position: absolute;
+                content: "";
+                transform: translateY(-50%);
+                width: 100%;
+                height: 48px;
+                left: 0;
+                right: 0;
+                padding: 0;
+                background-color: var(--component-dropdownItem-bg-hover);
+                border-radius: var(--core-borderRadius-200);
+                pointer-events: none;
+            }
+    
+            &-first {
+                &::before {
+                    border-radius: var(--core-borderRadius-200) 0 0
+                        var(--core-borderRadius-200);
+                }
+            }
+    
+            &-last {
+                &::before {
+                    border-radius: 0 var(--core-borderRadius-200)
+                        var(--core-borderRadius-200) 0;
+                }
+            }
+    
+            &-center {
+                &::before {
+                    border-radius: 0;
+                }
+            }
 
         &::-webkit-scrollbar {
             display: none;
