--- a/lib/components/Input/dropdown-field/dropdown.scss
+++ b/lib/components/Input/dropdown-field/dropdown.scss
@@ -18,7 +18,7 @@
         flex-direction: column;
         align-items: flex-start;
         margin-top: var(--core-size-200);
-        min-width: 360px;
+        width: 100%;
         overflow-y: auto;
 
         &--height {
