fix: fixed border issue in generic wheel picker

--- a/lib/components/Input/generic-wheel-picker/generic-wheel-picker.scss
+++ b/lib/components/Input/generic-wheel-picker/generic-wheel-picker.scss
@@ -69,6 +69,7 @@
         &__is-open {
             @include breakpoint("md") {
                 height: 240px;
+                box-shadow: var(--semantic-elevation-shadow-card-hover);
             }
         }
 
